# modeliter

./: LICENSE.txt  README.md  broker.sqlite  config_loading.py  cutie.py  cutieconfig.py  duckdb_script.py  hatch_build.py  pyproject.toml  requirements.txt  script.py  task_loading.py
cutiepy/: __init__.py  __main__.py  app.py  cli.py  config.py  configloader.py  dashboardserver.py  eventlogs.py  factories.py  mode.py  serde.py  supervisor.py  taskrequest.py  taskrequests.py  tasks.py  test_cutiepy.py  types.py  workrequests.py
cutiepy/_old/: configloader.py  taskrequests.py  taskruns.py  types.py
cutiepy/_old/cli/: __init__.py  dashboard.py
cutiepy/_old/duckdb/: __init__.py  schema.py  table.py
cutiepy/_old/workers/: __init__.py
cutiepy/book/: __init__.py
cutiepy/book/events/: __init__.py  cancelledtaskrequest.py  cancelledtaskrequestevent.py  completedtaskrequest.py  completedtaskrequestevent.py  createdtaskrequest.py  createdtaskrequestevent.py  pausedworker.py  receivedheartbeat.py  receivedheartbeatevent.py  receivedtaskrun.py  receivedtaskrunevent.py  registeredworker.py  registeredworkerevent.py  senttaskrun.py  timedouttaskrequest.py  timedouttaskrequestevent.py  (+3 more)
cutiepy/broker/: cli.py  errors.py  http_api.py  services.py
cutiepy/brokers/: __init__.py  broker.py  inprocess.py  inprocessbroker.py  sqlitebroker.py
cutiepy/cli/: __init__.py  commandbroker.py  dashboard.py  run.py  worker.py
cutiepy/config/: __init__.py  brokerconfig.py  resultstorageconfig.py  workerconfig.py
cutiepy/core/: __init__.py  app.py  broker.py  brokerclient.py  dashboardserver.py  supervisor.py  task.py  task_request.py  task_run.py  taskrequest.py  taskrun.py  work_request.py  worker.py  workrequest.py
cutiepy/dashboardserver/: __init__.py  routing.py
cutiepy/dashboardservers/: __init__.py  inprocess.py  inprocessdashboardserver.py
cutiepy/duckdb/: __init__.py  column.py  schema.py  table.py
cutiepy/httpserver/: __init__.py  frontend.py  routing.py
cutiepy/processes/: supervisorprocess.py
cutiepy/resultstorages/: __init__.py  resultstorage.py  sqliteresultstorage.py
cutiepy/sql/: __init__.py
cutiepy/supervisors/: __init__.py  inprocess.py  inprocesssupervisor.py
cutiepy/workers/: __init__.py  inprocess.py  inprocessworker.py  worker.py
cutiepy_dashboard_frontend/: package.json
cutiepy_dashboard_frontend/src/: App.tsx
cutiepy_tests/: serde_test.py
cutiepy_tests/broker/: http_api_test.py
cutiepy_website/: README.md  docusaurus.config.js  package-lock.json  package.json
cutiepy_website/docs/: index.md  quickstart.md
modeliter/: __init__.py  __main__.py  errors.py
modeliter/cli/: __init__.py
modeliter/http/: __init__.py  routes.py
modeliter/httpserver/: __init__.py  api.py  frontend.py  routing.py
modeliter/package/: __init__.py
modeliter/services/: __init__.py  names.py
modeliter_frontend/: package-lock.json  package.json
modeliter_frontend/src/: App.tsx
scripts/: build_frontend.py  run_dev.sh  setup_dev.sh
site/: index.html
tests/: test_httpserver.py
(+37 files in other folders)
