[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cutiepy"
description = "The CutiePy project"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Bobby Chen", email = "chenbobby168@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
dependencies = [
  "click",
  "hatchling",
  "pydantic",
  "starlette",
  "uvicorn",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/modeliter#readme"
Issues = "https://github.com/unknown/modeliter/issues"
Source = "https://github.com/unknown/modeliter"

[project.scripts]
cutiepy = "cutiepy:main"

[tool.hatch.version]
path = "cutiepy/__version__.py"

[tool.hatch.build]
ignore-vcs = true
artifacts = ["cutiepy_dashboard_frontend/build"]

[tool.hatch.build.hooks.custom]
[tool.hatch.build.targets.wheel]
packages = ["cutiepy"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "requests",
]
python = "3.10"
pre-install-commands = [
  "pip install --upgrade pip",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=modeliter --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
